Fix [General] Long Tooltip is cropped (#658)

--- a/src/common/Tooltip/tooltip.scss
+++ b/src/common/Tooltip/tooltip.scss
@@ -2,4 +2,5 @@
   position: fixed;
   z-index: 10;
   white-space: nowrap;
+  word-break: break-word;
 }
